--- a/bp-templates/shared/styles/_bp_navigation.scss
+++ b/bp-templates/shared/styles/_bp_navigation.scss
@@ -355,7 +355,7 @@
 					margin: 0;
 
 					a {
-						margin-top: -1em;
+						margin-top: -0.5em;
 					}
 				}
 
